Bug fixes and more (see desc.)
Tried to get the font info from the css file used, no matter what file it is; failed. This will get the text shrinking if the name is too big to work perfectly. Right now, you have to manually change the font and font size in the popup.js file every time you change the theme.

--- a/css/modern_dark.css
+++ b/css/modern_dark.css
@@ -1,15 +1,15 @@
 @font-face {
-	src: url("../fonts/Montserrat-Medium.ttf");
-	font-family: Mont;
+	src:url("../fonts/Montserrat-Medium.ttf");
+	font-family:Mont;
 }
 html {
 	height:390px;
 	background-color:#212b31;
-	border-style: solid;
+	border-style:solid;
 	border-color:#40525e;
 	border-width:3px;
 }
-.topbar{
+.topbar {
 	width:389px;
 	height:20px;
 	background-color:#40525e;
@@ -22,20 +22,11 @@ html {
 button {
 	border-style:solid;
 	border-color:#40525e;
-	background-color: #40525e;
+	background-color:#40525e;
 	font-family:Mont;
 	outline-color:Silver;
 	color:#8ca7b8;
 	border-radius:4%;
-	transition-duration: 0.8s;
-	height:22px;
-	
-}
-button:hover {
-	background-color:#587181;
-	border:#587181;
-	color:#8ca7b8;
-	display:block;
 	height:22px;
 }
 p {
@@ -43,7 +34,7 @@ p {
 	color:Gainsboro;
 }
 input[type=text] {
-	font-size:12px;
+	font-size:13px;
 	font-family:Mont;
 	width:118px;
 	height:18px;
@@ -52,7 +43,7 @@ input[type=text] {
 	background-color:#40525e;
 	border-radius:4%;
 	color:Gainsboro;
-	border:1px solid #8ca7b8;
+	border:1px solid#8ca7b8;
 	outline:none;
 }
 .checkbox-label input {
@@ -62,7 +53,7 @@ input[type=text] {
 	position:absolute;
 	left:210px;
 	background-color:Silver;
-	border:.5px solid Silver;
+	border:.5px solidSilver;
 	display:block;
 	width:11px;
 	height:11px;
@@ -76,7 +67,7 @@ input[type=text] {
 	border:.5px solid Silver;
 	background-color:Silver;
 	-webkit-transform:rotate(0deg) scale(1);
-	-ms-transform: rotate(0deg) scale(1);
+	-ms-transform:rotate(0deg) scale(1);
 	transform:rotate(0deg) scale(1);
 	opacity:1;
 	background-image:url("../images/check.png");
@@ -88,7 +79,7 @@ input[type=text] {
 	width:165px;
 	height:110px;
 	position:absolute;
-	top: 200px;
+	top:200px;
 	left:209px;
 	border-radius:4%;
 }
@@ -149,11 +140,11 @@ sesh-top {
 	top:-2px;
 }
 #divide {
-	border:1.5px solid; 
+	border:1.5px solid;
 	border-radius:10%;
-	position:fixed; 
-	top:50px; 
-	left:19px; 
+	position:fixed;
+	top:50px;
+	left:19px;
 	padding-left:176px;
 	border-color:#40525e;
 }
